Fix introduction modal on ios

--- a/src/sass/phone.scss
+++ b/src/sass/phone.scss
@@ -56,7 +56,6 @@
   .modal-open .introduction-modal {
     display: block;
     position: unset;
-    overflow-y: auto;
     background-color: rgba(255, 255, 255, 1) !important;
     z-index: 9999;
 
@@ -74,7 +73,7 @@
         min-width: 100%;
         height: auto;
         margin: 0 !important;
-        padding-bottom: 5rem; // padding for ipad and iphone
+        padding-bottom: 15rem; // padding for ipad and iphone
         border: none;
         box-shadow: none;
 
